add about section layout

--- a/portfolio/layouts/index.html
+++ b/portfolio/layouts/index.html
@@ -1,12 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Boštjan Kamnik</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 </head>
+
 <body>
-    hi there
+    <nav>
+        <ul>
+            <li>
+                <a href="#">                Boštjan Kamnik                </a>
+            </li>
+            <li>
+                <a href="#portfolio">portfolio</a>
+            </li>
+            <li>
+                <a href="#contact">contact</a>
+            </li>
+            <li><a href="#contact">Let's work together !</a></li>
+        </ul>
+    </nav>
+    <div class="bookmark-side">
+
+    </div>
+
+    <section id="about">
+        <div class="w3-container">
+            <div class="w3-content">
+                <div class="w3-row">
+                    <div class="w3-col m6">
+                        <div id="about-text">
+                            <h2>Web Developer</h2>
+                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Earum voluptatibus esse nesciunt consectetur vero eligendi! Fugit, quisquam exercitationem non delectus natus rem! Hic quam quaerat non, obcaecati placeat necessitatibus
+                                est voluptatum voluptates quasi doloremque dignissimos maiores ipsa in labore, sint eius totam recusandae temporibus explicabo dolorem qui nostrum reiciendis dolore?</p>
+                        </div>
+                    </div>
+                    <div id="about-aside" class="w3-col m6">
+                        <img src="" alt="" class="w3-amber">
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </section>
+
+    <section id="portfolio">
+        <div class="w3-row">
+            <div class="w3-col m4 l3">
+                <p>12 columns on a small screen, 4 on a medium screen, and 3 on a large screen.</p>
+            </div>
+            <div class="w3-col m8 l9">
+                <p>12 columns on a small screen, 8 on a medium screen, and 9 on a large screen.</p>
+            </div>
+        </div>
+    </section>
+    <section id="contact">
+
+    </section>
+
 </body>
+
 </html>
