--- a/portfolio/layouts/index.html
+++ b/portfolio/layouts/index.html
@@ -33,7 +33,7 @@
         <div class="w3-container">
             <div class="w3-content">
                 <div class="w3-row">
-                    <div class="w3-col m6">
+                    <div class="w3-col m5 w3-margin-right">
                         <div id="about-text">
                             <h2>Web Developer</h2>
                             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Earum voluptatibus esse nesciunt consectetur vero eligendi! Fugit, quisquam exercitationem non delectus natus rem! Hic quam quaerat non, obcaecati placeat necessitatibus
@@ -42,6 +42,13 @@
                     </div>
                     <div id="about-aside" class="w3-col m6">
                         <img src="" alt="" class="w3-amber">
+                        <nav>
+                            <ul class="w3-container">
+                                <li class="w3-cell"><a class="w3-margin-right">Web Developer</a></li>
+                                <li class="w3-cell"><a class="w3-margin-right">Electronics</a></li>
+                                <li class="w3-cell"><a class="w3-margin-right">Travel</a></li>
+                            </ul>
+                        </nav>
                     </div>
                 </div>
             </div>
