--- a/portfolio/layouts/index.html
+++ b/portfolio/layouts/index.html
@@ -12,17 +12,20 @@
 
 <body>
     <nav>
-        <ul>
-            <li>
-                <a href="#">                Boštjan Kamnik                </a>
+        <ul class="w3-bar">
+            <li class="w3-bar-item">
+                <a class="w3-text-grey w3-button w3-hover-none w3-border-white w3-bottombar w3-hover-border-black" href="#">Boštjan Kamnik
+            </a>
             </li>
-            <li>
-                <a href="#portfolio">portfolio</a>
+            <li class="w3-bar-item ">
+                <a class="w3-text-red w3-button w3-hover-none w3-border-white w3-bottombar w3-hover-border-black" href="#portfolio">portfolio</a>
             </li>
-            <li>
-                <a href="#contact">contact</a>
+            <li class="w3-bar-item ">
+                <a class="w3-text-red w3-button w3-hover-none w3-border-white w3-bottombar w3-hover-border-black" href="#contact">contact</a>
             </li>
-            <li><a href="#contact">Let's work together !</a></li>
+            <li class="w3-bar-item ">
+                <a class="w3-text-red w3-button w3-hover-none w3-border-white w3-bottombar w3-hover-border-black" href="#contact">Let's work together !</a>
+            </li>
         </ul>
     </nav>
     <div class="bookmark-side">
