add bookmark toggling logic

--- a/portfolio/layouts/index.html
+++ b/portfolio/layouts/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <nav>
+    <nav class="w3-content w3-center">
         <ul class="w3-bar">
             <li class="w3-bar-item">
                 <a class="w3-text-grey w3-button w3-hover-none w3-border-white w3-bottombar w3-hover-border-black" href="#">Boštjan Kamnik
@@ -28,8 +28,10 @@
             </li>
         </ul>
     </nav>
-    <div class="bookmark-side">
-
+    <div id="bookmark-side">
+        <!-- <img src="" alt="" class="img-side-move-in w3-brown"> -->
+        <img id="web-dev-bookmark" src="" alt="" class="item-bookmark w3-animate-left w3-animate-opacity w3-orange">
+        <img id="electronics-bookmark" src="" alt="" class="item-bookmark w3-animate-left w3-animate-opacity w3-brown w3-hide">
     </div>
 
     <section id="about">
@@ -45,11 +47,18 @@
                     </div>
                     <div id="about-aside" class="w3-col m6">
                         <img src="" alt="" class="w3-amber">
-                        <nav>
-                            <ul class="w3-container">
-                                <li class="w3-cell"><a class="w3-margin-right">Web Developer</a></li>
-                                <li class="w3-cell"><a class="w3-margin-right">Electronics</a></li>
-                                <li class="w3-cell"><a class="w3-margin-right">Travel</a></li>
+                        <nav class="w3-content w3-center">
+                            <ul class="w3-bar">
+                                <li class="w3-bar-item">
+                                    <button class="w3-button" onclick="onSidebarNavClick(this)" data-toggle="web-dev-bookmark" >Web Developer</button>
+                                </li>
+                                <li class="w3-bar-item ">
+                                    <button class="w3-button" onclick="onSidebarNavClick(this)" data-toggle="electronics-bookmark">Electronics</button>
+                                </li>
+                                <li class="w3-bar-item ">
+                                </li>
+                                <li class="w3-bar-item ">
+                                </li>
                             </ul>
                         </nav>
                     </div>
@@ -60,19 +69,59 @@
     </section>
 
     <section id="portfolio">
-        <div class="w3-row">
-            <div class="w3-col m4 l3">
-                <p>12 columns on a small screen, 4 on a medium screen, and 3 on a large screen.</p>
-            </div>
-            <div class="w3-col m8 l9">
-                <p>12 columns on a small screen, 8 on a medium screen, and 9 on a large screen.</p>
-            </div>
-        </div>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis praesentium in facere corporis dolorum, distinctio corrupti perferendis deserunt minus tenetur porro adipisci explicabo delectus deleniti voluptate accusamus non alias quis iusto eveniet
+        vero eos natus. Doloribus ullam modi aliquam omnis ad? Cum atque sapiente, ex ipsum aut harum voluptatibus odio repellat ab voluptas iusto omnis quos, sunt labore quaerat consequuntur iste at libero corrupti rerum? Quo architecto minima praesentium
+        debitis deserunt perspiciatis. Mollitia iusto corporis ut labore doloremque magnam, tempora odit provident quidem voluptatem laudantium dolorum fuga quibusdam, atque, minima quod enim quae sit recusandae unde. Vero, obcaecati, veritatis minus
+        omnis dicta ratione esse modi quo, natus aliquid fugiat? Accusamus doloribus dolorem rerum magni officiis nesciunt architecto dolore autem fugit, repellendus reprehenderit expedita dicta voluptatem, odit maiores quod voluptatibus quasi pariatur
+        unde. Quisquam obcaecati quo corporis. Aut, amet iure. Sed, impedit. Nesciunt consectetur velit a minima maxime commodi vero ut deserunt impedit fugit, ab facere eius sequi placeat ipsam atque magni veritatis, incidunt quae nostrum esse quis magnam
+        asperiores. Enim nemo consequuntur earum nobis labore nulla? Excepturi odio esse cumque necessitatibus culpa aliquam tenetur aliquid dignissimos doloremque eos. Assumenda similique, mollitia veniam consectetur, quam distinctio dolor ratione, tempore
+        iusto natus commodi sed laboriosam expedita! Quibusdam debitis blanditiis temporibus tempora. Eos possimus consequuntur ratione! Reiciendis aspernatur vel veritatis maxime numquam quisquam iusto libero aut temporibus, ex sunt adipisci assumenda
+        porro dignissimos quam excepturi? Amet praesentium quidem doloremque quasi atque alias, nesciunt temporibus distinctio numquam? Consequuntur ullam officiis nostrum? Praesentium excepturi nihil officia laborum dolorum perspiciatis fugiat tempore
+        nostrum dolorem odit! Vel voluptatum voluptas reiciendis optio nam, quidem aut, sunt quis iure eos quae, ratione rerum deleniti necessitatibus. Fuga blanditiis voluptatibus nulla saepe corporis sed inventore illo numquam, dolores praesentium ex
+        molestias? Optio nulla dicta, commodi illum asperiores itaque neque aut ratione.
     </section>
     <section id="contact">
-
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora illum illo error earum assumenda necessitatibus dolore nihil nemo ratione totam, in architecto voluptates odit ipsa, facere tempore dolor debitis officia distinctio dignissimos consequatur
+        natus eveniet. Placeat cumque, suscipit, doloribus recusandae eligendi, laborum facilis dolores vitae facere alias officiis dolore aut. Facilis aut necessitatibus iusto quos nam illo doloribus veniam ipsam. Ab illo numquam quasi provident ratione.
+        Blanditiis eaque modi, temporibus necessitatibus tempora, ut deleniti cupiditate id unde facilis itaque numquam! Temporibus reiciendis veniam quas et qui dolorem dolorum officiis doloremque quia, iusto illum delectus vel, sit voluptatum laudantium
+        quisquam hic debitis placeat, eveniet ducimus ex perspiciatis corporis? Pariatur ut obcaecati reprehenderit quas quibusdam illo beatae accusamus sequi eligendi perspiciatis labore quam voluptatum quod, dignissimos, explicabo aut placeat libero
+        distinctio, tempora harum ipsam quaerat officiis hic. Ut impedit in, laudantium sed voluptates veritatis inventore perspiciatis corrupti dignissimos nesciunt eligendi officia eos libero non pariatur. Doloremque quod minus numquam eligendi molestias
+        illum ea itaque, odit consectetur est asperiores laborum id ex incidunt veniam ducimus dolorum vel, deleniti vero error eum nostrum! Deserunt commodi dicta optio impedit odit accusantium officia dignissimos, ratione autem temporibus amet? Deserunt
+        incidunt quis, amet culpa modi cum maxime repellat tenetur debitis quasi harum beatae dicta. Rem veniam facere nam, voluptatum tenetur mollitia. Omnis nulla alias magni labore, dolores aliquid asperiores incidunt. Non voluptatum, voluptatem ab
+        assumenda quisquam provident similique illum molestiae obcaecati at odit illo magni explicabo officiis, veritatis reprehenderit. Ab iste hic aperiam, debitis necessitatibus distinctio ex consequuntur quis cumque eveniet mollitia dicta voluptatibus
+        asperiores nobis numquam quas veritatis reiciendis maiores, magni delectus non beatae? Voluptates tempore odit accusamus porro quis nesciunt esse optio corrupti eaque excepturi consequatur modi corporis aspernatur quae perferendis temporibus distinctio
+        maxime, repudiandae architecto debitis est doloribus. Libero consequatur tempore a consequuntur architecto. Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora illum illo error earum assumenda necessitatibus dolore nihil nemo ratione
+        totam, in architecto voluptates odit ipsa, facere tempore dolor debitis officia distinctio dignissimos consequatur natus eveniet. Placeat cumque, suscipit, doloribus recusandae eligendi, laborum facilis dolores vitae facere alias officiis dolore
+        aut. Facilis aut necessitatibus iusto quos nam illo doloribus veniam ipsam. Ab illo numquam quasi provident ratione. Blanditiis eaque modi, temporibus necessitatibus tempora, ut deleniti cupiditate id unde facilis itaque numquam! Temporibus reiciendis
+        veniam quas et qui dolorem dolorum officiis doloremque quia, iusto illum delectus vel, sit voluptatum laudantium quisquam hic debitis placeat, eveniet ducimus ex perspiciatis corporis? Pariatur ut obcaecati reprehenderit quas quibusdam illo beatae
+        accusamus sequi eligendi perspiciatis labore quam voluptatum quod, dignissimos, explicabo aut placeat libero distinctio, tempora harum ipsam quaerat officiis hic. Ut impedit in, laudantium sed voluptates veritatis inventore perspiciatis corrupti
+        dignissimos nesciunt eligendi officia eos libero non pariatur. Doloremque quod minus numquam eligendi molestias illum ea itaque, odit consectetur est asperiores laborum id ex incidunt veniam ducimus dolorum vel, deleniti vero error eum nostrum!
+        Deserunt commodi dicta optio impedit odit accusantium officia dignissimos, ratione autem temporibus amet? Deserunt incidunt quis, amet culpa modi cum maxime repellat tenetur debitis quasi harum beatae dicta. Rem veniam facere nam, voluptatum tenetur
+        mollitia. Omnis nulla alias magni labore, dolores aliquid asperiores incidunt. Non voluptatum, voluptatem ab assumenda quisquam provident similique illum molestiae obcaecati at odit illo magni explicabo officiis, veritatis reprehenderit. Ab iste
+        hic aperiam, debitis necessitatibus distinctio ex consequuntur quis cumque eveniet mollitia dicta voluptatibus asperiores nobis numquam quas veritatis reiciendis maiores, magni delectus non beatae? Voluptates tempore odit accusamus porro quis
+        nesciunt esse optio corrupti eaque excepturi consequatur modi corporis aspernatur quae perferendis temporibus distinctio maxime, repudiandae architecto debitis est doloribus. Libero consequatur tempore a consequuntur architecto. Lorem ipsum dolor
+        sit amet consectetur adipisicing elit. Tempora illum illo error earum assumenda necessitatibus dolore nihil nemo ratione totam, in architecto voluptates odit ipsa, facere tempore dolor debitis officia distinctio dignissimos consequatur natus eveniet.
+        Placeat cumque, suscipit, doloribus recusandae eligendi, laborum facilis dolores vitae facere alias officiis dolore aut. Facilis aut necessitatibus iusto quos nam illo doloribus veniam ipsam. Ab illo numquam quasi provident ratione. Blanditiis
+        eaque modi, temporibus necessitatibus tempora, ut deleniti cupiditate id unde facilis itaque numquam! Temporibus reiciendis veniam quas et qui dolorem dolorum officiis doloremque quia, iusto illum delectus vel, sit voluptatum laudantium quisquam
+        hic debitis placeat, eveniet ducimus ex perspiciatis corporis? Pariatur ut obcaecati reprehenderit quas quibusdam illo beatae accusamus sequi eligendi perspiciatis labore quam voluptatum quod, dignissimos, explicabo aut placeat libero distinctio,
+        tempora harum ipsam quaerat officiis hic. Ut impedit in, laudantium sed voluptates veritatis inventore perspiciatis corrupti dignissimos nesciunt eligendi officia eos libero non pariatur. Doloremque quod minus numquam eligendi molestias illum
+        ea itaque, odit consectetur est asperiores laborum id ex incidunt veniam ducimus dolorum vel, deleniti vero error eum nostrum! Deserunt commodi dicta optio impedit odit accusantium officia dignissimos, ratione autem temporibus amet? Deserunt incidunt
+        quis, amet culpa modi cum maxime repellat tenetur debitis quasi harum beatae dicta. Rem veniam facere nam, voluptatum tenetur mollitia. Omnis nulla alias magni labore, dolores aliquid asperiores incidunt. Non voluptatum, voluptatem ab assumenda
+        quisquam provident similique illum molestiae obcaecati at odit illo magni explicabo officiis, veritatis reprehenderit. Ab iste hic aperiam, debitis necessitatibus distinctio ex consequuntur quis cumque eveniet mollitia dicta voluptatibus asperiores
+        nobis numquam quas veritatis reiciendis maiores, magni delectus non beatae? Voluptates tempore odit accusamus porro quis nesciunt esse optio corrupti eaque excepturi consequatur modi corporis aspernatur quae perferendis temporibus distinctio maxime,
+        repudiandae architecto debitis est doloribus. Libero consequatur tempore a consequuntur architecto. Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora illum illo error earum assumenda necessitatibus dolore nihil nemo ratione totam,
+        in architecto voluptates odit ipsa, facere tempore dolor debitis officia distinctio dignissimos consequatur natus eveniet. Placeat cumque, suscipit, doloribus recusandae eligendi, laborum facilis dolores vitae facere alias officiis dolore aut.
+        Facilis aut necessitatibus iusto quos nam illo doloribus veniam ipsam. Ab illo numquam quasi provident ratione. Blanditiis eaque modi, temporibus necessitatibus tempora, ut deleniti cupiditate id unde facilis itaque numquam! Temporibus reiciendis
+        veniam quas et qui dolorem dolorum officiis doloremque quia, iusto illum delectus vel, sit voluptatum laudantium quisquam hic debitis placeat, eveniet ducimus ex perspiciatis corporis? Pariatur ut obcaecati reprehenderit quas quibusdam illo beatae
+        accusamus sequi eligendi perspiciatis labore quam voluptatum quod, dignissimos, explicabo aut placeat libero distinctio, tempora harum ipsam quaerat officiis hic. Ut impedit in, laudantium sed voluptates veritatis inventore perspiciatis corrupti
+        dignissimos nesciunt eligendi officia eos libero non pariatur. Doloremque quod minus numquam eligendi molestias illum ea itaque, odit consectetur est asperiores laborum id ex incidunt veniam ducimus dolorum vel, deleniti vero error eum nostrum!
+        Deserunt commodi dicta optio impedit odit accusantium officia dignissimos, ratione autem temporibus amet? Deserunt incidunt quis, amet culpa modi cum maxime repellat tenetur debitis quasi harum beatae dicta. Rem veniam facere nam, voluptatum tenetur
+        mollitia. Omnis nulla alias magni labore, dolores aliquid asperiores incidunt. Non voluptatum, voluptatem ab assumenda quisquam provident similique illum molestiae obcaecati at odit illo magni explicabo officiis, veritatis reprehenderit. Ab iste
+        hic aperiam, debitis necessitatibus distinctio ex consequuntur quis cumque eveniet mollitia dicta voluptatibus asperiores nobis numquam quas veritatis reiciendis maiores, magni delectus non beatae? Voluptates tempore odit accusamus porro quis
+        nesciunt esse optio corrupti eaque excepturi consequatur modi corporis aspernatur quae perferendis temporibus distinctio maxime, repudiandae architecto debitis est doloribus. Libero consequatur tempore a consequuntur architecto.
     </section>
 
+    <script src="./index.js"></script>
 </body>
 
 </html>
