--- a/portfolio/layouts/index.html
+++ b/portfolio/layouts/index.html
@@ -30,17 +30,22 @@
     </nav>
     <div id="bookmark-side">
         <!-- <img src="" alt="" class="img-side-move-in w3-brown"> -->
-        <img id="web-dev-bookmark" src="" alt="" class="item-bookmark w3-animate-left w3-animate-opacity w3-orange">
-        <img id="electronics-bookmark" src="" alt="" class="item-bookmark w3-animate-left w3-animate-opacity w3-brown w3-hide">
+        <img src="" alt="" class="web-dev-toggle-bookmark w3-animate-left w3-animate-opacity w3-orange">
+        <img src="" alt="" class="electronics-toggle-bookmark w3-animate-left w3-animate-opacity w3-brown w3-hide">
     </div>
 
     <section id="about">
         <div class="w3-container">
             <div class="w3-content">
                 <div class="w3-row">
-                    <div class="w3-col m5 w3-margin-right">
-                        <div id="about-text">
+                    <div id="about-text" class="w3-col m5 w3-margin-right">
+                        <div class="web-dev-toggle-bookmark">
                             <h2>Web Developer</h2>
+                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Earum voluptatibus esse nesciunt consectetur vero eligendi! Fugit, quisquam exercitationem non delectus natus rem! Hic quam quaerat non, obcaecati placeat necessitatibus
+                                est voluptatum voluptates quasi doloremque dignissimos maiores ipsa in labore, sint eius totam recusandae temporibus explicabo dolorem qui nostrum reiciendis dolore?</p>
+                        </div>
+                        <div class="electronics-toggle-bookmark">
+                            <h2>Electronics</h2>
                             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Earum voluptatibus esse nesciunt consectetur vero eligendi! Fugit, quisquam exercitationem non delectus natus rem! Hic quam quaerat non, obcaecati placeat necessitatibus
                                 est voluptatum voluptates quasi doloremque dignissimos maiores ipsa in labore, sint eius totam recusandae temporibus explicabo dolorem qui nostrum reiciendis dolore?</p>
                         </div>
@@ -50,10 +55,10 @@
                         <nav class="w3-content w3-center">
                             <ul class="w3-bar">
                                 <li class="w3-bar-item">
-                                    <button class="w3-button" onclick="onSidebarNavClick(this)" data-toggle="web-dev-bookmark" >Web Developer</button>
+                                    <button class="w3-button" onclick="onSidebarNavClick(this)" data-toggle="web-dev" data-toggle-id="bookmark">Web Developer</button>
                                 </li>
                                 <li class="w3-bar-item ">
-                                    <button class="w3-button" onclick="onSidebarNavClick(this)" data-toggle="electronics-bookmark">Electronics</button>
+                                    <button class="w3-button" onclick="onSidebarNavClick(this)" data-toggle="electronics" data-toggle-id="bookmark">Electronics</button>
                                 </li>
                                 <li class="w3-bar-item ">
                                 </li>
