style about text animation

--- a/portfolio/layouts/index.html
+++ b/portfolio/layouts/index.html
@@ -39,12 +39,12 @@
             <div class="w3-content">
                 <div class="w3-row">
                     <div id="about-text" class="w3-col m5 w3-margin-right">
-                        <div class="web-dev-toggle-bookmark">
+                        <div class="web-dev-toggle-bookmark w3-animate-opacity">
                             <h2>Web Developer</h2>
                             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Earum voluptatibus esse nesciunt consectetur vero eligendi! Fugit, quisquam exercitationem non delectus natus rem! Hic quam quaerat non, obcaecati placeat necessitatibus
                                 est voluptatum voluptates quasi doloremque dignissimos maiores ipsa in labore, sint eius totam recusandae temporibus explicabo dolorem qui nostrum reiciendis dolore?</p>
                         </div>
-                        <div class="electronics-toggle-bookmark">
+                        <div class="electronics-toggle-bookmark w3-animate-opacity w3-hide">
                             <h2>Electronics</h2>
                             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Earum voluptatibus esse nesciunt consectetur vero eligendi! Fugit, quisquam exercitationem non delectus natus rem! Hic quam quaerat non, obcaecati placeat necessitatibus
                                 est voluptatum voluptates quasi doloremque dignissimos maiores ipsa in labore, sint eius totam recusandae temporibus explicabo dolorem qui nostrum reiciendis dolore?</p>
