layout portfolio items

--- a/portfolio/layouts/index.html
+++ b/portfolio/layouts/index.html
@@ -74,16 +74,27 @@
     </section>
 
     <section id="portfolio">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis praesentium in facere corporis dolorum, distinctio corrupti perferendis deserunt minus tenetur porro adipisci explicabo delectus deleniti voluptate accusamus non alias quis iusto eveniet
-        vero eos natus. Doloribus ullam modi aliquam omnis ad? Cum atque sapiente, ex ipsum aut harum voluptatibus odio repellat ab voluptas iusto omnis quos, sunt labore quaerat consequuntur iste at libero corrupti rerum? Quo architecto minima praesentium
-        debitis deserunt perspiciatis. Mollitia iusto corporis ut labore doloremque magnam, tempora odit provident quidem voluptatem laudantium dolorum fuga quibusdam, atque, minima quod enim quae sit recusandae unde. Vero, obcaecati, veritatis minus
-        omnis dicta ratione esse modi quo, natus aliquid fugiat? Accusamus doloribus dolorem rerum magni officiis nesciunt architecto dolore autem fugit, repellendus reprehenderit expedita dicta voluptatem, odit maiores quod voluptatibus quasi pariatur
-        unde. Quisquam obcaecati quo corporis. Aut, amet iure. Sed, impedit. Nesciunt consectetur velit a minima maxime commodi vero ut deserunt impedit fugit, ab facere eius sequi placeat ipsam atque magni veritatis, incidunt quae nostrum esse quis magnam
-        asperiores. Enim nemo consequuntur earum nobis labore nulla? Excepturi odio esse cumque necessitatibus culpa aliquam tenetur aliquid dignissimos doloremque eos. Assumenda similique, mollitia veniam consectetur, quam distinctio dolor ratione, tempore
-        iusto natus commodi sed laboriosam expedita! Quibusdam debitis blanditiis temporibus tempora. Eos possimus consequuntur ratione! Reiciendis aspernatur vel veritatis maxime numquam quisquam iusto libero aut temporibus, ex sunt adipisci assumenda
-        porro dignissimos quam excepturi? Amet praesentium quidem doloremque quasi atque alias, nesciunt temporibus distinctio numquam? Consequuntur ullam officiis nostrum? Praesentium excepturi nihil officia laborum dolorum perspiciatis fugiat tempore
-        nostrum dolorem odit! Vel voluptatum voluptas reiciendis optio nam, quidem aut, sunt quis iure eos quae, ratione rerum deleniti necessitatibus. Fuga blanditiis voluptatibus nulla saepe corporis sed inventore illo numquam, dolores praesentium ex
-        molestias? Optio nulla dicta, commodi illum asperiores itaque neque aut ratione.
+        <div class="w3-container">
+            <div class="w3-cell-row">
+
+                <div class="w3-container w3-red w3-cell">
+                    <p>Hello W3.CSS Layout.</p>
+                </div>
+
+                <div class="w3-container w3-green w3-cell">
+                    <p>Hello W3.CSS Layout.</p>
+                </div>
+
+            </div>
+            <div class="w3-cell-row">
+                <div class="portfolio-item w3-col m6 l4 w3-center"><img src="" alt=""></div>
+                <div class="portfolio-item w3-col m6 l4 w3-center"><img src="" alt=""></div>
+                <div class="portfolio-item w3-col m6 l4 w3-center"><img src="" alt=""></div>
+                <div class="portfolio-item w3-col m6 l4 w3-center"><img src="" alt=""></div>
+                <div class="portfolio-item w3-col m6 l4 w3-center"><img src="" alt=""></div>
+                <div class="portfolio-item w3-col m6 l4 w3-center"><img src="" alt=""></div>
+            </div>
+        </div>
     </section>
     <section id="contact">
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora illum illo error earum assumenda necessitatibus dolore nihil nemo ratione totam, in architecto voluptates odit ipsa, facere tempore dolor debitis officia distinctio dignissimos consequatur
