--- a/portfolio/static/style.css
+++ b/portfolio/static/style.css
@@ -8,20 +8,6 @@
 } */
 
 /* ------------------------------ bookmark side ----------------------------- */
-.img-side-move-in {
-    animation: fade-in;
-}
-
-@keyframes fade-in {
-    0% {
-      opacity: 0;
-      transform: translateX(-50%);
-    }
-    100% {
-      opacity: 1;
-      transform: translateX(0);
-    }
-  }
 #bookmark-side {
     height: 550px;
     width: 90px;
@@ -45,3 +31,27 @@
     background-color: hotpink;
     display: flex;
 }
+
+
+
+/* -------------------------------- portfolio ------------------------------- */
+#portfolio .item-wrapper {
+    /* display: flex;
+    flex-direction: row;
+    flex-wrap: wrap; */
+    margin: 0 auto;
+}
+
+.portfolio-item{
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 16px;
+    margin-bottom: 16px;
+}
+.portfolio-item img {
+    width: 300px;
+    height: 375px;
+    background-color: brown;
+}
+
+/* todo: mediaquery for item width on medium screens */
