--- a/portfolio/layouts/index.html
+++ b/portfolio/layouts/index.html
@@ -74,18 +74,7 @@
     </section>
 
     <section id="portfolio">
-        <div class="w3-container">
-            <div class="w3-cell-row">
-
-                <div class="w3-container w3-red w3-cell">
-                    <p>Hello W3.CSS Layout.</p>
-                </div>
-
-                <div class="w3-container w3-green w3-cell">
-                    <p>Hello W3.CSS Layout.</p>
-                </div>
-
-            </div>
+        <div class="w3-container w3-content">
             <div class="w3-cell-row">
                 <div class="portfolio-item w3-col m6 l4 w3-center"><img src="" alt=""></div>
                 <div class="portfolio-item w3-col m6 l4 w3-center"><img src="" alt=""></div>
